--- a/CSS/home.css
+++ b/CSS/home.css
@@ -41,7 +41,7 @@ html {
     box-sizing: border-box;
     list-style: none; /*quita los puntos*/
     display:flex; 
-    gap: 1.2cm;                 /* espacio entre ellos */
+    gap: 0.9cm;                 /* espacio entre ellos */
     align-items: center;
 }
 
@@ -71,6 +71,8 @@ html {
   gap: 25px; /* espacio entre la foto y el texto */
   margin-top: 2cm; /* centrado horizontal */
   margin-bottom: 5%;
+  margin-left: 2%;
+margin-right: 2%;
 }
 
 .about-me .jimena-foto {
@@ -137,8 +139,19 @@ html {
     min-width: 0; /* para que no se estire demasiado en pantallas grandes */
     margin-left: auto;
     margin-right: auto;
+   
   
 }
+
+
+/*para q no queden 3 y 1*/
+@media screen and (max-width: 1100px) {
+    .projects .projects-grid {
+        grid-template-columns: repeat(2, minmax(120px, 200px));
+        justify-content: center; /* centra las tarjetas si hay espacio de sobra*/
+    }
+}
+
 
 .quizec img, .recipeat img, .linja img, .quantik img {
     width: 100%; /* para que ocupe todo el ancho del contenedor */
@@ -156,6 +169,7 @@ html {
     color: #b72025;
     border-radius: 20px;
 }
+
 
 .projects .recipeat:hover,
 .projects .linja:hover,
@@ -247,6 +261,7 @@ html {
     padding: 20px;
 }
 
+
 .contact-me-card h3 {
     color: #b72025;
 }
@@ -314,5 +329,29 @@ html {
     transition: background-color 0.3s ease; /* transición suave */
 
 }
+
+
+
+@media screen and (max-width: 600px) {
+    .projects .projects-grid {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); /* Ajusta el tamaño de las tarjetas en pantallas pequeñas */
+    }
+
+    .contact-me-form-name-email {
+        gap: 20px; /* espacio entre los campos */
+    }  
+
+    .contact-me-card {
+        width: 80%; 
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .contact-me-card {
+        width: 80%; 
+    }
+    
+}
+
 
 
