--- a/css/home.css
+++ b/css/home.css
@@ -23,68 +23,13 @@ html {
 
 }
 
-.header {
-    background-image: url(../img/850a8eccb26046cf3f2b6a4df458db23.jpg);
-    padding: 1%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /*centra verticalmente*/
-    position: relative;
-}
-
-.header .saludo {
-    color: whitesmoke;
-    font-weight: 800;
-    text-align: bottom;
-    text-shadow: #b72025 1px 1px 2px, #b72025 -1px -1px 2px, #b72025 1px -1px 2px, #b72025 -1px 1px 2px;
-}
-
-.menu {
-    display: none;
-    /* Oculto por defecto */
-}
-
-.header ul {
-    margin: 0px;
-    padding: 0%;
-    box-sizing: border-box;
-    list-style: none;
-    /*quita los puntos*/
-    display: flex;
-    gap: 0.9cm;
-    /* espacio entre ellos */
-    align-items: center;
-}
-
-.header ul li a {
-    font-size: 90%;
-    text-decoration: none;
-    /*quita el subrayado*/
-    color: #b72025;
-    background-color: whitesmoke;
-    border-radius: 30px;
-    padding: 8px 10px;
-    display: inline-block;
-    /*necesario para q se vea siempre bien*/
-}
-
-.header ul li a:hover {
-    color: #b72025;
-    /*background-color: #f8bed4;*/
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-    /* sombra al fondo */
-    font-weight: 800;
-}
-
-
 .about-me {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 25px;
     /* espacio entre la foto y el texto */
-    margin-top: 2cm;
+    margin-top: 3rem;
     /* centrado horizontal */
     margin-bottom: 5%;
     margin-left: 2%;
@@ -403,59 +348,8 @@ html {
 
 
 @media screen and (max-width: 600px) {
-    .header nav ul {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        flex-direction: column;
-        background-color: whitesmoke;
-        padding: 1rem 2rem;
-        gap: 15px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-        border-radius: 0px 0px 8px 8px;
-        width:fit-content;
-        display: none; /* Oculto por defecto */
-      
-
-    }
-
-    .header nav ul li {
-        border-bottom: 1px solid #ccc;
-    }
-
-    /* Quitar la línea del último elemento */
-    .header nav ul li:last-child {
-        border-bottom: none;
-
-    }
-
-
-    .header ul li a {
-        background-color: transparent;
-        /* Cambia el fondo a transparente */
-    }
-
-    .header ul li a:hover {
-        box-shadow: none;
-
-    }
-
-
-    .header nav ul.show {
-        display: flex;
-    }
-
-    .menu {
-        display: block;
-        /* Muestra el menú en pantallas pequeñas */
-        background-color: transparent;
-        color: whitesmoke;
-        padding: 10px 20px;
-        align-items: end;
-        justify-content: end;
-        border: none;
-        font-size: 19px;
-        cursor: pointer;
+    .skills ul {
+        flex-wrap: wrap; /* Permite que los logos se acomoden en varias líneas si es necesario */
     }
 
     .projects .projects-grid {
