--- a/css/home.css
+++ b/css/home.css
@@ -18,10 +18,16 @@
 }
 
 :root {
-  --color-bg: #FFE6EF;          /* fondo general */
-  --color-primary: rgb(175, 49, 95);     /* rojo burdeos elegante */
-  --color-secondary: #c94f7c     ;   /* rosa suave, acentos */
-  --color-text: #6b0036;        /* gris oscuro para texto */
+    --color-bg: #FFE6EF;
+    /* fondo general */
+    --color-primary: rgb(175, 49, 95);
+    /* rojo burdeos elegante */
+    --color-secondary: #c94f7c;
+    /* rosa suave, acentos */
+    --color-tertiary: rgb(156, 0, 60);
+    /* rosa claro, para detalles */
+    --color-text: #6b0036;
+    /* gris oscuro para texto */
 }
 
 html {
@@ -41,11 +47,11 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 70px;
     /* espacio entre la foto y el texto */
     margin-top: 3rem;
     /* centrado horizontal */
-    margin-bottom: 3rem;
+    margin-bottom: 3.5rem;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
@@ -53,37 +59,51 @@ html {
 .about-me .jimena-foto {
     display: block;
     /* Necesario para que se centre con margin */
-    width: 150px;
+    width: 250px;
     /* Ajusta el tamaño */
-    height: 150px;
+    height: 250px;
     /* Igual que el ancho para círculo */
     object-fit: cover;
     /* Recorta la imagen si no es cuadrada */
     border-radius: 50%;
     /* Hace la imagen completamente redonda */
+    box-shadow: 0 4px 20px rgba(175, 49, 95, 0.25);
+}
+
+
+.about-me-saludo {
+    color: var(--color-text);
+    font-size: smaller;
 }
 
 .about-me .about-me-info .nombre {
     font-weight: 700;
     font-size: 30px;
     color: var(--color-primary);
-    margin-bottom: 10px;
-    /* espacio debajo del nombre */
+
+}
+
+.about-me .about-me-info .engineer {
+    font-weight: 600;
+    font-size: 18px;
+    color: whitesmoke;
+    margin-bottom: 1rem;
+    /* espacio debajo del título */
+    background-color: rgb(156, 0, 60, 0.7);
+    padding: 5px 10px;
+    border-radius: 10px;
+    display: inline-block;
+
 }
 
 .about-me .about-me-info .descripcion {
+    text-align: justify;
     color: var(--color-text);
     width: 100%;
     max-width: 550px;
     /* para que no se extienda demasiado */
 }
 
-.skills {
-    /*skills*/
-    color: var(--color-primary);
-    font-weight: 800;
-    text-align: center;
-}
 
 .skills h2 {
     margin-bottom: 2%;
@@ -100,7 +120,7 @@ html {
     /* Centra horizontalmente */
     margin-bottom: 5%;
     margin-left: 1.2rem;
-     margin-right: 1.2rem;
+    margin-right: 1.2rem;
 }
 
 .skills ul li img {
@@ -116,17 +136,19 @@ html {
     /* Transición suave */
 }
 
-
+.skills,
 .projects h1,
 .contact-me h1 {
     color: var(--color-primary);
     font-weight: 800;
     text-align: center;
+    margin-top: 3rem;
 }
 
 .projects .projects-grid {
+    justify-content: center;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
     gap: 40px;
     /* Espacio entre los proyectos */
     padding: 2% 0;
@@ -145,8 +167,7 @@ html {
 @media screen and (max-width: 1100px) {
     .projects .projects-grid {
         grid-template-columns: repeat(2, minmax(120px, 200px));
-        justify-content: center;
-        /* centra las tarjetas si hay espacio de sobra*/
+
     }
 }
 
@@ -292,7 +313,7 @@ html {
     display: flex;
     flex-direction: column;
     color: var(--color-secondary);
-    font-weight: 600;  
+    font-weight: 600;
 }
 
 .contact-me-form-name-email input {
@@ -300,7 +321,7 @@ html {
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    
+
 }
 
 .contact-me-form-end {
@@ -347,7 +368,8 @@ html {
 }
 
 footer {
-    background-color: rgb(175, 49, 95, 0.7); /*rgba(74, 26, 36, 0.70);/*8B1E3F*/
+    background-color: rgb(175, 49, 95, 0.7);
+    /*rgba(74, 26, 36, 0.70);/*8B1E3F*/
     text-align: center;
     margin-top: 6rem;
     color: whitesmoke;
@@ -377,36 +399,55 @@ footer {
 
 
 @media screen and (max-width: 600px) {
-    .about-me{
+
+    .projects .projects-grid {
+        grid-template-columns: repeat(2, minmax(100px, 200px));
+
+    }
+
+    .about-me {
         flex-direction: column;
         /* Cambia a columna en pantallas pequeñas */
         align-items: center;
         /* Centra los elementos */
         margin-left: 1.5rem;
         margin-right: 1.5rem;
+        gap: 20px;
+        /* Espacio entre la foto y el texto */
+        text-align: center;
+
     }
 
-    .about-me-info .nombre{
-        text-align: center;
+    .about-me .jimena-foto {
+        width: 180px;
+        /* Ajusta el tamaño de la foto */
+        height: 180px;
+        /* Igual que el ancho para círculo */
     }
 
     .about-me-info .descripcion {
         text-align: justify;
-        /* Centra el texto en pantallas pequeñas */   
+        /* Centra el texto en pantallas pequeñas */
     }
 
     .skills ul {
-        flex-wrap: wrap; /* Permite que los logos se acomoden en varias líneas si es necesario */
+        flex-wrap: wrap;
+        /* Permite que los logos se acomoden en varias líneas si es necesario */
     }
 
-    .projects .projects-grid {
-        grid-template-columns: repeat(auto-fit, minmax(110px, 1fr));
-        /* Ajusta el tamaño de las tarjetas en pantallas pequeñas */
+    .contact-me-form {
+        width: 100%;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        align-items: center;
+        text-align: left;
     }
 
     .contact-me-form-name-email {
         gap: 20px;
         /* espacio entre los campos */
+        flex-direction: column;
+    
     }
 
     .contact-me-form button {
@@ -418,6 +459,13 @@ footer {
 }
 
 @media screen and (max-width: 900px) {
+    .about-me .jimena-foto {
+        width: 200px;
+        /* Ajusta el tamaño de la foto */
+        height: 200px;
+        /* Igual que el ancho para círculo */
+    }
+
     .contact-me-card {
         width: 80%;
     }
