--- a/css/home.css
+++ b/css/home.css
@@ -49,7 +49,7 @@
     color: whitesmoke;
     margin-bottom: 1rem;
     /* espacio debajo del título */
-    background-color: rgb(156, 0, 60, 0.7);
+    background-color: var(--color-4);
     padding: 5px 10px;
     border-radius: 10px;
     display: inline-block;
@@ -153,7 +153,7 @@
 .projects .linja,
 .projects .quizec,
 .projects .quantik {
-    background-color: white;
+    background-color: whitesmoke;
     color: var(--color-secondary);
     border-radius: 20px;
 }
@@ -229,7 +229,7 @@
 
 
 .contact-me-card {
-    background-color: #fff0f6;
+    background-color: var(--color-contact-card-bg);
     width: 100%;
     max-width: 650px;
     /* para que no se extienda demasiado */
@@ -246,7 +246,8 @@
 
 
 .contact-me-card h3 {
-    color: var(--color-primary);
+    color: var(--color-contact-card-title);
+    font-weight: 800;
 }
 
 .contact-me-form {
@@ -272,7 +273,7 @@
     flex: 1 1 0;
     display: flex;
     flex-direction: column;
-    color: var(--color-secondary);
+    color: var(--color-contact-card-text);
     font-weight: 600;
 }
 
@@ -281,6 +282,7 @@
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    background-color: whitesmoke;
 
 }
 
@@ -301,11 +303,12 @@
     margin: 0 auto;
     /* centrado horizontal */
     font-family: "Mukta", sans-serif;
+    background-color: whitesmoke;
 
 }
 
 .contact-me-form button {
-    background-color: rosybrown;
+    background-color: var(--color-disabled);
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
@@ -320,7 +323,7 @@
 
 
 .contact-me-form button:hover {
-    background-color: var(--color-secondary);
+    background-color: var(--color-button);
     /* cambia el color al pasar el mouse */
     transition: background-color 0.3s ease;
     /* transición suave */
