--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
     --color-footer-bg: #af315fb3;
     --color-bg: #FFE6EF;
     /* fondo general */
-    --color-primary: rgb(175, 49, 95);
+    --color-primary: #af315f;
     /* rojo burdeos elegante */
     --color-secondary: #c94f7c;
     /* rosa suave, acentos */
@@ -18,27 +18,30 @@
     /* rosa claro, para detalles */
     --color-text: #6b0036;
     /* gris oscuro para texto */
-    --color-contact-card-title: var(--color-tertiary); 
-    --color-contact-card-text: var(--color-primary);
-    --color-contact-card-bg: #eacdd8;
+    --color-contact-card-title: var(--color-bg); 
+    --color-contact-card-text: whitesmoke;
+    --color-contact-card-bg: var(--color-4);
     --color-disabled: rosybrown;
-    --color-button: var(--color-secondary);
+    --color-button: var(--color-text);
+    --color-input-bg: whitesmoke;
+    --color-border: var(--color-text); /* borde de entrada oscuro */
 }
 
 body.dark-mode {
-    --color-footer-bg: #ff7caa92;
-    --color-bg: #121212; /* fondo oscuro real */
+    --color-footer-bg: #3a1c2b;
+    --color-bg: #2c131c; /* fondo oscuro real */
     --color-primary: #FF7CA9; /* rosa intenso elegante */
-    --color-secondary: #d14b7f; /* rosa intermedio */
+    --color-secondary: #b7436f; /* rosa intermedio */
     --color-tertiary: #9c003c; /* detalles más oscuros */
     --color-4: rgba(255, 140, 180, 0.739); /* translúcido suave */
     --color-text: #f8dce6; /* texto rosado claro */
-    --color-contact-card-bg: var(--color-primary); /* fondo para contacto, burdeos profundo */
+    --color-contact-card-bg: var(--color-4); /* fondo para contacto, burdeos profundo */
     --color-contact-card-title: var(--color-bg); /* texto claro en contacto */
     --color-contact-card-text: var(--color-bg); /* texto claro en contacto */
-    --color-disabled: #974861; /* gris claro para botones deshabilitados */
-    --color-button: #5a2b3a ; /* rosa intermedio para botones */
-    
+    --color-disabled: #522e3895; /* gris claro para botones deshabilitados */
+    --color-button: #60263a ; /* rosa intermedio para botones */
+    --color-input-bg: var(--color-bg); /* fondo de entrada oscuro */
+    --color-border: #ffa2c4; /* borde de entrada oscuro */
     background-color: var(--color-bg);
     color: var(--color-text);
 } 
