--- a/css/home.css
+++ b/css/home.css
@@ -62,6 +62,7 @@
     width: 100%;
     max-width: 550px;
     /* para que no se extienda demasiado */
+
 }
 
 
@@ -70,7 +71,7 @@
     /* espacio entre el título y la lista */
 }
 
-.skills ul {
+.skills-tools ul {
     list-style: none;
     display: flex;
     /* Pone los <li> en fila */
@@ -79,8 +80,8 @@
     justify-content: center;
     /* Centra horizontalmente */
     margin-bottom: 5%;
-    margin-left: 1.2rem;
-    margin-right: 1.2rem;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .skills ul li img {
@@ -103,6 +104,36 @@
     font-weight: 800;
     text-align: center;
     margin-top: 3rem;
+}
+
+.skills-scroll {
+    overflow: hidden;
+    margin-left: 30%;
+    margin-right: 30%;
+
+}
+
+.skills-lan ul {
+    list-style: none;
+    display: flex;
+    gap: 40px;
+    /* Permite que los logos se acomoden en varias líneas si es necesario */
+    animation: deslizar 12s linear infinite;
+    margin-top: 1%;
+}
+
+.skills-lan ul:hover {
+    animation-play-state: paused;
+}
+
+@keyframes deslizar {
+    0% {
+        transform: translateX(3.5%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 .projects .projects-grid {
@@ -153,7 +184,7 @@
 .projects .linja,
 .projects .quizec,
 .projects .quantik {
-    background-color: whitesmoke;
+    background-color: var(--color-cards-bg);
     color: var(--color-secondary);
     border-radius: 20px;
 }
@@ -308,7 +339,7 @@
     font-family: "Mukta", sans-serif;
     background-color: var(--color-input-bg);
     color: whitesmoke;
-   
+
 
 
 }
@@ -336,6 +367,36 @@
 
 }
 
+
+@media screen and (max-width: 900px) {
+    .about-me .jimena-foto {
+        width: 200px;
+        /* Ajusta el tamaño de la foto */
+        height: 200px;
+        /* Igual que el ancho para círculo */
+    }
+
+    .contact-me-card {
+        width: 80%;
+    }
+
+    .skills-scroll {
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
+    @keyframes deslizar {
+        0% {
+            transform: translateX(3%);
+        }
+
+        100% {
+            transform: translateX(-140%);
+        }
+    }
+
+
+}
 
 
 @media screen and (max-width: 600px) {
@@ -370,9 +431,26 @@
         /* Centra el texto en pantallas pequeñas */
     }
 
-    .skills ul {
-        flex-wrap: wrap;
-        /* Permite que los logos se acomoden en varias líneas si es necesario */
+
+    .skills-lan ul {
+        gap: 1.5rem;
+        animation: deslizar 12s linear infinite;
+    }
+
+    @keyframes deslizar {
+        0% {
+            transform: translateX(3.5%);
+        }
+
+        100% {
+            transform: translateX(-103.5%);
+        }
+    }
+
+    .skills-scroll {
+        margin-left: 0%;
+        margin-right: 0%;
+
     }
 
     .contact-me-form {
@@ -387,7 +465,7 @@
         gap: 20px;
         /* espacio entre los campos */
         flex-direction: column;
-    
+
     }
 
     .contact-me-form button {
@@ -396,18 +474,4 @@
         white-space: nowrap;
         /* evita que el texto se divida en varias líneas */
     }
-}
-
-@media screen and (max-width: 900px) {
-    .about-me .jimena-foto {
-        width: 200px;
-        /* Ajusta el tamaño de la foto */
-        height: 200px;
-        /* Igual que el ancho para círculo */
-    }
-
-    .contact-me-card {
-        width: 80%;
-    }
-
 }
